<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="140dp"
            android:layout_height="210dp"
            android:src="@drawable/sample"
            android:scaleType="fitXY"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:maxLines="2"
            app:layout_constraintTop_toTopOf="@id/imageViewAvatar"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            tools:text="Naruto" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_type"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/type"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            tools:text="Naruto" />

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/txt_episode"-->
<!--            style="@style/TextAppearance.AppCompat.Large"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/txt_type"-->
<!--            android:paddingStart="16dp"-->
<!--            android:paddingEnd="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"-->
<!--            tools:text="TV" />-->


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_score"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/rating"
            app:layout_constraintTop_toBottomOf="@id/txt_type"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            tools:text="7.94" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_start_date"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/start_date"
            app:layout_constraintTop_toBottomOf="@id/txt_score"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            tools:text="7.94" />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_end_date"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/end_date_s"
            app:layout_constraintTop_toBottomOf="@id/txt_start_date"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            tools:text="7.94" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_members"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/members_watching"
            app:layout_constraintTop_toBottomOf="@id/txt_end_date"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"
            tools:text="7.94" />

<!--        <androidx.appcompat.widget.AppCompatTextView-->
<!--            android:id="@+id/txt_rating"-->
<!--            style="@style/TextAppearance.AppCompat.Large"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/txt_members"-->
<!--            android:paddingStart="16dp"-->
<!--            android:paddingEnd="16dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toEndOf="@+id/imageViewAvatar"-->
<!--            tools:text="7.94" />-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAvatar"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Movie ticket to Dark Phoenix!" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>